Fri Nov 27 22:44:01 PST 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/dbbrowser/dbbrowser_utils.c: scrolled window fix

Sat Nov 28 03:36:54 MET 1998 Sven Neumann <sven@gimp.org>

	* /app/gimage_mask_cmds.c: fixed an obvious bug (thanks to 
	Wolfgang Hofer <wolfgang.hofer@siemens.at> for reporting it)

Fri Nov 27 17:34:57 1998  Owen Taylor  <otaylor@redhat.com>

	* app/ink.c: Use MAX when combining multiple blobs,
	instead of previous technique.	This gives _much_ 
	better results.

Fri Nov 27 11:45:03 1998  Raph Levien  <raph@gimp.org>

	* app/devices.c (devices_restore): changed silent return on
	device_info == NULL to a g_warning_if_fail (now that Gtk+ is fixed,
	this case should never happen).

Wed Nov 25 18:37:44 1998  Owen Taylor  <otaylor@redhat.com>

	* plug-ins/gz/gz.c: We don't need GTK+, and we
	don't use GTK_CFLAGS, so don't include <gtk/gtk.h>.

Wed Nov 25 22:26:11 1998  Raph Levien  <raph@gimp.org>

	* app/ink.c (ink_pen_ellipse): Added yet another slider, this time
	for an angle adjustment.

Wed Nov 25 21:41:52 1998  Raph Levien  <raph@gimp.org>

	* app/devices.c (devices_restore): Fixed a segv - now it returns
	when there are no devices configured.

Wed Nov 25 22:12:50 CET 1998 Marc Lehmann <pcg@goof.com>

	* plug-ins/script-fu/scripts/line-nova.scm,
	plug-ins/script-fu/scripts/text-circle.scm,
	plug-ins/script-fu/scripts/unsharp-mask.scm: applied update by Shuji
	Narazaki <narazaki@gimp.org>.

Wed Nov 25 09:52:23 1998  Raph Levien  <raph@gimp.org>

	* app/ink.c (ink_pen_ellipse, create_ink_options): Added tilt
	sensitivity.

Mon Nov 23 06:44:10 PST 1998 Manish Singh <yosh@gimp.org>

	* applied gimp-stric-981116-1, lots o files changes in app. i18n
	patch.

	* plug-ins/gfig/gfig.c: applied gimp-tml-981121-0, use proper PDB
	params

Mon Nov 23 01:17:57 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: require GTK+ 1.1.5

	* app/bezier_select.c
	* app/channels_dialog.c
	* app/global_edit.c
	* app/layers_dialog.c
	* plug-ins/film/film.c